--- a/assets/entitlements.mac.plist
+++ b/assets/entitlements.mac.plist
@@ -1,3 +1,8 @@
+<!-- The entitlements.mac.plist file defines macOS app entitlements 
+for the Electron application, such as allowing just-in-time (JIT) 
+compilation. It is used to configure security and runtime permissions 
+required by the app. -->
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
